<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.13</version>
	</parent>

	<groupId>jkml</groupId>
	<artifactId>spring-boot-data-cassandra-example</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<properties>
		<java.version>11</java.version>
		<cassandra.version>4.0.10</cassandra.version>
		<cassandra-unit.version>4.3.1.0</cassandra-unit.version>
	</properties>

	<dependencies>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-cassandra</artifactId>
		</dependency>

		<!-- Ensure transitive dependencies of java-driver-core take precedence
		over those of cassandra-all and cassandra-unit -->
		<dependency>
			<groupId>com.datastax.oss</groupId>
			<artifactId>java-driver-core</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.awaitility</groupId>
			<artifactId>awaitility</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- Ensure transitive dependencies of cassandra-all take precedence
		over those of cassandra-unit -->
		<dependency>
			<groupId>org.apache.cassandra</groupId>
			<artifactId>cassandra-all</artifactId>
			<version>${cassandra.version}</version>
			<scope>test</scope>
			<exclusions>
				<!-- Exclude older version that shadows version used by latest driver -->
				<exclusion>
					<groupId>org.ow2.asm</groupId>
					<artifactId>*</artifactId>
				</exclusion>
				<!-- Exclude high-scale-lib because this project includes its sources already minus classes in packages of jdk.base -->
				<exclusion>
					<groupId>com.boundary</groupId>
					<artifactId>*</artifactId>
				</exclusion>
				<!-- Exclude dependencies containing classes in packages of jdk.base -->
				<exclusion>
					<groupId>org.gridkit.jvmtool</groupId>
					<artifactId>*</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.gridkit.lab</groupId>
					<artifactId>*</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.cassandraunit</groupId>
			<artifactId>cassandra-unit-spring</artifactId>
			<version>${cassandra-unit.version}</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.apache.thrift</groupId>
					<artifactId>*</artifactId>
				</exclusion>
				<exclusion>
					<groupId>junit</groupId>
					<artifactId>*</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>
						<!-- From
						https://github.com/apache/cassandra/blob/cassandra-4.0.10/conf/jvm11-clients.options -->
						-Djdk.attach.allowAttachSelf=true
						
						--add-exports java.base/jdk.internal.misc=ALL-UNNAMED
						--add-exports java.base/jdk.internal.ref=ALL-UNNAMED
						--add-exports java.base/sun.nio.ch=ALL-UNNAMED
						--add-exports java.management.rmi/com.sun.jmx.remote.internal.rmi=ALL-UNNAMED
						--add-exports java.rmi/sun.rmi.registry=ALL-UNNAMED
						--add-exports java.rmi/sun.rmi.server=ALL-UNNAMED
						--add-exports java.sql/java.sql=ALL-UNNAMED
						
						--add-opens java.base/java.lang.module=ALL-UNNAMED
						--add-opens java.base/jdk.internal.loader=ALL-UNNAMED
						--add-opens java.base/jdk.internal.ref=ALL-UNNAMED
						--add-opens java.base/jdk.internal.reflect=ALL-UNNAMED
						--add-opens java.base/jdk.internal.math=ALL-UNNAMED
						--add-opens java.base/jdk.internal.module=ALL-UNNAMED
						--add-opens java.base/jdk.internal.util.jar=ALL-UNNAMED
						--add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
					</argLine>
				</configuration>
			</plugin>
		</plugins>

	</build>

</project>
